--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,9 @@
 	"type": "project",
 	"require": {
 		"laravel/framework": "5.0.*",
-		"laravelcollective/html": "~5.0"
+		"laravelcollective/html": "~5.0",
+		"overtrue/laravel-pinyin": "dev-master",
+		"overtrue/laravel-lang": "dev-master"
 	},
 	"require-dev": {
 		"phpunit/phpunit": "~4.0",
