--- a/composer.json
+++ b/composer.json
@@ -8,8 +8,7 @@
 		"laravel/framework": "5.0.*",
 		"laravelcollective/html": "~5.0",
 		"overtrue/laravel-pinyin": "dev-master",
-		"overtrue/laravel-lang": "dev-master",
-		"onokumus/metismenu": "dev-master"
+		"overtrue/laravel-lang": "dev-master"
 	},
 	"require-dev": {
 		"phpunit/phpunit": "~4.0",
