--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,8 @@
 		"laravel/framework": "5.0.*",
 		"laravelcollective/html": "~5.0",
 		"overtrue/laravel-pinyin": "dev-master",
-		"overtrue/laravel-lang": "dev-master"
+		"overtrue/laravel-lang": "dev-master",
+		"nesbot/carbon": "^1.20"
 	},
 	"require-dev": {
 		"phpunit/phpunit": "~4.0",
